Revision history for Perl extension AI::MXNet
1.5     Sun Feb 16 19:56:17 PST 2020
        - Runtime features
        - INT64 Tensor support

1.4     Mon Feb 18 11:54:07 PST 2019
        - Two more gluon loss classes
        - Visualization fixes
        - Gluon rnn rework, including hybridization
        - Exposed GPU memory info to perl level.

1.33    Thu Oct  4 13:25:56 PDT 2018
        - Added randn function.
        - Internal SELU function on C++ layer.
        - Predict now accepts ndarray as well.
        - Gluon: Only warn when the blocks are unregistered.
        - Gluon: Better sparse support.
        - Gluon: Improved block summary.
        - Added validation docs for MXNet installation for Perl.
        - Flexible perl env for examples.
        - Gluon: Custom dtypes for the symbol block
        - Separate eval metric for the epoch level.

1.32    Sun Aug  5 14:25:31 PDT 2018
        - Several new metric classes
        - Expanded documentation
        - Bugfixes.

1.31    Tue Jul 10 21:19:13 PDT 2018
        - Memory leak fix for Gluon API
        - Added summary function for Gluon models
        - Improved graphviz vizualizations
        - Added artistic style transfer example for Gluon API

1.3     Tue Jun 26 20:57:40 PDT 2018
        - Major Gluon update towards parity with Python's API.
        - Miscellaneous bugfixes and improvements.
        - New Engine API.
        - Module::reshape moved to C++ backend.
        - Examples were updated to work on multi-gpu boxes

1.23    Thu Apr 19 15:38:10 PDT 2018
        - Support for image operations on symbols and ndarrays.

1.22    Sat Apr 14 17:51:55 PDT 2018
        - Parity with Python Gluon Loss classes

1.21    Sun Apr  8 12:08:44 PDT 2018
        - Support for linear algebra operations on symbols and ndarrays.

1.2     Sun Mar  4 16:29:19 PST 2018
        - Support for sparse tensors

1.1     Sun Oct  1 10:19:08 PDT 2017