@@ -24,4 +24,4 @@ set -ex
 # install libraries for mxnet's perl package on ubuntu
 apt-get update || true
 apt-get install -y libmouse-perl pdl cpanminus swig libgraphviz-perl
-cpanm -q Function::Parameters Hash::Ordered CHM/PDL-2.019.tar.gz PDL::CCS
+cpanm -q Function::Parameters Hash::Ordered PDL~2.064 PDL::CCS
