@@ -60,27 +60,28 @@ use constant DTYPE_MX_TO_STR => {
     6 => 'int64'
 };
 use constant DTYPE_MX_TO_PDL => {
-    0 => 6,
-    1 => 7,
-    2 => 6,
-    3 => 0,
-    4 => 3,
-    5 => 0,
-    6 => 5,
-    float32 => 6,
-    float64 => 7,
-    float16 => 6,
-    uint8   => 0,
-    int32   => 3,
-    int8    => 0,
-    int64   => 5
+    0 => PDL::Type->new('float')->enum,
+    1 => PDL::Type->new('double')->enum,
+    2 => PDL::Type->new('float')->enum,
+    3 => PDL::Type->new('byte')->enum,
+    4 => PDL::Type->new('long')->enum,
+    5 => PDL::Type->new('sbyte')->enum,
+    6 => PDL::Type->new('longlong')->enum,
+    float32 => PDL::Type->new('float')->enum,
+    float64 => PDL::Type->new('double')->enum,
+    float16 => PDL::Type->new('float')->enum,
+    uint8   => PDL::Type->new('byte')->enum,
+    int32   => PDL::Type->new('long')->enum,
+    int8    => PDL::Type->new('sbyte')->enum,
+    int64   => PDL::Type->new('longlong')->enum,
 };
 use constant DTYPE_PDL_TO_MX => {
-    6 => 0,
-    7 => 1,
-    0 => 3,
-    3 => 4,
-    5 => 6
+    PDL::Type->new('float')->enum     => 0,
+    PDL::Type->new('double')->enum    => 1,
+    PDL::Type->new('byte')->enum      => 3,
+    PDL::Type->new('long')->enum      => 4,
+    PDL::Type->new('sbyte')->enum     => 5,
+    PDL::Type->new('longlong')->enum  => 6,
 };
 use constant DTYPE_MX_TO_PERL => {
     0 => 'f',
